[gd_scene load_steps=8 format=3 uid="uid://row58uftcxen"]

[ext_resource type="Script" path="res://Scenes/Levels/Level1/scene.gd" id="1_ofghk"]
[ext_resource type="Texture2D" uid="uid://df2pwoo73wdek" path="res://Assets/Pirate Island/Palm Tree Island/Sprites/Terrain/Terrain (32x32).png" id="2_0fwii"]
[ext_resource type="PackedScene" uid="uid://dbhh1ux71x4xa" path="res://Scenes/Player/player.tscn" id="3_nc3y0"]
[ext_resource type="PackedScene" uid="uid://ccjeyus7dgtha" path="res://Scenes/Enemies/FollowerEnemy/followerEnemy.tscn" id="4_v2sc1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fcoyj"]
resource_name = "BaseTileset"
texture = ExtResource("2_0fwii")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:0/0 = 0
12:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:0/0/physics_layer_0/angular_velocity = 0.0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
13:0/0 = 0
13:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:0/0/physics_layer_0/angular_velocity = 0.0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
15:0/0 = 0
15:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:0/0/physics_layer_0/angular_velocity = 0.0
15:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:1/0 = 0
10:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:1/0/physics_layer_0/angular_velocity = 0.0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:1/0 = 0
12:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:1/0/physics_layer_0/angular_velocity = 0.0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
13:1/0 = 0
13:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:1/0/physics_layer_0/angular_velocity = 0.0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
15:1/0 = 0
15:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:1/0/physics_layer_0/angular_velocity = 0.0
15:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
16:1/0 = 0
16:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:1/0/physics_layer_0/angular_velocity = 0.0
16:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -5.5625, 16, -10.0625, 14.125, -12.9375, 11.5, -14.9375, 7.125, -16, 2.125)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, -16, -16, -16, 5.25, -13.8125, 9.5, -11.8125, 12.5, -9.1875, 14.5, -6.0625, 16, 5.5625, 16, 10.0625, 14.125, 13.1875, 12.125, 14.9375, 8, 16, 2.125)
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:3/0 = 0
12:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:3/0/physics_layer_0/angular_velocity = 0.0
12:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
13:3/0 = 0
13:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:3/0/physics_layer_0/angular_velocity = 0.0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
15:3/0 = 0
15:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:3/0/physics_layer_0/angular_velocity = 0.0
15:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
16:3/0 = 0
16:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:3/0/physics_layer_0/angular_velocity = 0.0
16:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -5.5625, 16, -10.0625, 14.125, -12.9375, 11.5, -14.9375, 7.125, -16, 2.125)
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, -16, -16, -16, 16, 5.5625, 16, 10.0625, 14.125, 12.9375, 11.5, 14.9375, 7.125, 16, 2.125)
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, -16, -16, -16, 5.25, -13.8125, 9.5, -11.8125, 12.5, -9.1875, 14.5, -6.0625, 16, 5.5625, 16, 10.0625, 14.125, 13.1875, 12.125, 14.9375, 8, 16, 2.125)
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:4/0 = 0
9:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:4/0/physics_layer_0/angular_velocity = 0.0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:4/0 = 0
10:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:4/0/physics_layer_0/angular_velocity = 0.0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:4/0 = 0
12:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:4/0/physics_layer_0/angular_velocity = 0.0
12:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
13:4/0 = 0
13:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:4/0/physics_layer_0/angular_velocity = 0.0
13:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
15:4/0 = 0
15:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:4/0/physics_layer_0/angular_velocity = 0.0
15:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -5.5625, 16, -10.0625, 14.125, -12.9375, 11.5, -14.9375, 7.125, -16, 2.125)
16:4/0 = 0
16:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:4/0/physics_layer_0/angular_velocity = 0.0
16:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, -16, -16, -16, 16, 5.5625, 16, 10.0625, 14.125, 12.9375, 11.5, 14.9375, 7.125, 16, 2.125)

[sub_resource type="TileSet" id="TileSet_vohjp"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_fcoyj")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3koqi"]
size = Vector2(148.5, 823.5)

[node name="Level" type="Node2D"]
script = ExtResource("1_ofghk")

[node name="TileMap" type="TileMap" parent="."]
modulate = Color(0.807843, 0.807843, 0.807843, 1)
position = Vector2(-380, 190)
tile_set = SubResource("TileSet_vohjp")
format = 2
layer_0/tile_data = PackedInt32Array(1703955, 65536, 0, 1703956, 65536, 0, 1703957, 65536, 0, 1703958, 65536, 0, 1703959, 65536, 0, 1703960, 65536, 0, 1703961, 65536, 0, 1703962, 65536, 0, 1703963, 65536, 0, 1703964, 65536, 0, 1703965, 65536, 0, 1703966, 65536, 0, 1703967, 65536, 0, 1703968, 65536, 0, 1703969, 65536, 0, 1703970, 65536, 0, 1703971, 65536, 0, 1703972, 65536, 0, 1703973, 65536, 0, 1703974, 65536, 0, 1703975, 65536, 0, 1703976, 65536, 0, 1703977, 65536, 0, 1703978, 65536, 0, 1703979, 65536, 0, 1703980, 65536, 0, 1703981, 65536, 0, 1703982, 65536, 0, 1703983, 65536, 0, 1703984, 65536, 0, 1703985, 65536, 0, 1703986, 65536, 0, 1703954, 65536, 0, 1703953, 65536, 0, 1703952, 65536, 0, 1703951, 65536, 0, 1703950, 65536, 0, 1703949, 65536, 0, 1703948, 65536, 0, 1703987, 65536, 0, 1703988, 65536, 0, 1703989, 65536, 0, 1703990, 65536, 0, 1703991, 65536, 0, 1703992, 65536, 0, 1703993, 65536, 0, 1703994, 65536, 0, 1703995, 65536, 0, 1703996, 65536, 0, 1703997, 65536, 0, 1703998, 65536, 0, 1703999, 65536, 0, 1769484, 65536, 1, 1769485, 65536, 1, 1769486, 65536, 1, 1769487, 65536, 1, 1769488, 65536, 1, 1769489, 65536, 1, 1769490, 65536, 1, 1769491, 65536, 1, 1769492, 65536, 1, 1769493, 65536, 1, 1769494, 65536, 1, 1769495, 65536, 1, 1769496, 65536, 1, 1769497, 65536, 1, 1769498, 65536, 1, 1835035, 65536, 1, 1835036, 65536, 1, 1835037, 65536, 1, 1835038, 65536, 1, 1835039, 65536, 1, 1835040, 65536, 1, 1835041, 65536, 1, 1835042, 65536, 1, 1835043, 65536, 1, 1835044, 65536, 1, 1835045, 65536, 1, 1835046, 65536, 1, 1835020, 65536, 1, 1900556, 65536, 1, 1966092, 65536, 1, 1835021, 65536, 1, 1900557, 65536, 1, 1966093, 65536, 1, 1835022, 65536, 1, 1900558, 65536, 1, 1966094, 65536, 1, 1835023, 65536, 1, 1900559, 65536, 1, 1966095, 65536, 1, 1835024, 65536, 1, 1900560, 65536, 1, 1966096, 65536, 1, 1835025, 65536, 1, 1900561, 65536, 1, 1966097, 65536, 1, 1835026, 65536, 1, 1900562, 65536, 1, 1966098, 65536, 1, 1835027, 65536, 1, 1900563, 65536, 1, 1966099, 65536, 1, 1835028, 65536, 1, 1900564, 65536, 1, 1966100, 65536, 1, 1835029, 65536, 1, 1900565, 65536, 1, 1966101, 65536, 1, 1835030, 65536, 1, 1900566, 65536, 1, 1966102, 65536, 1, 1835031, 65536, 1, 1900567, 65536, 1, 1966103, 65536, 1, 1835032, 65536, 1, 1900568, 65536, 1, 1966104, 65536, 1, 1835033, 65536, 1, 1900569, 65536, 1, 1966105, 65536, 1, 1835034, 65536, 1, 1900570, 65536, 1, 1966106, 65536, 1, 1769499, 65536, 1, 1900571, 65536, 1, 1966107, 65536, 1, 1769500, 65536, 1, 1900572, 65536, 1, 1966108, 65536, 1, 1769501, 65536, 1, 1900573, 65536, 1, 1966109, 65536, 1, 1769502, 65536, 1, 1900574, 65536, 1, 1966110, 65536, 1, 1769503, 65536, 1, 1900575, 65536, 1, 1966111, 65536, 1, 1769504, 65536, 1, 1900576, 65536, 1, 1966112, 65536, 1, 1769505, 65536, 1, 1900577, 65536, 1, 1966113, 65536, 1, 1769506, 65536, 1, 1900578, 65536, 1, 1966114, 65536, 1, 1769507, 65536, 1, 1900579, 65536, 1, 1966115, 65536, 1, 1769508, 65536, 1, 1900580, 65536, 1, 1966116, 65536, 1, 1769509, 65536, 1, 1900581, 65536, 1, 1966117, 65536, 1, 1769510, 65536, 1, 1900582, 65536, 1, 1966118, 65536, 1, 1769511, 65536, 1, 1835047, 65536, 1, 1900583, 65536, 1, 1966119, 65536, 1, 1769512, 65536, 1, 1835048, 65536, 1, 1900584, 65536, 1, 1966120, 65536, 1, 1769513, 65536, 1, 1835049, 65536, 1, 1900585, 65536, 1, 1966121, 65536, 1, 1769514, 65536, 1, 1835050, 65536, 1, 1900586, 65536, 1, 1966122, 65536, 1, 1769515, 65536, 1, 1835051, 65536, 1, 1900587, 65536, 1, 1966123, 65536, 1, 1769516, 65536, 1, 1835052, 65536, 1, 1900588, 65536, 1, 1966124, 65536, 1, 1769517, 65536, 1, 1835053, 65536, 1, 1900589, 65536, 1, 1966125, 65536, 1, 1769518, 65536, 1, 1835054, 65536, 1, 1900590, 65536, 1, 1966126, 65536, 1, 1769519, 65536, 1, 1835055, 65536, 1, 1900591, 65536, 1, 1966127, 65536, 1, 1769520, 65536, 1, 1835056, 65536, 1, 1900592, 65536, 1, 1966128, 65536, 1, 1769521, 65536, 1, 1835057, 65536, 1, 1900593, 65536, 1, 1966129, 65536, 1, 1769522, 65536, 1, 1835058, 65536, 1, 1900594, 65536, 1, 1966130, 65536, 1, 1769523, 65536, 1, 1835059, 65536, 1, 1900595, 65536, 1, 1966131, 65536, 1, 1769524, 65536, 1, 1835060, 65536, 1, 1900596, 65536, 1, 1966132, 65536, 1, 1769525, 65536, 1, 1835061, 65536, 1, 1900597, 65536, 1, 1966133, 65536, 1, 1769526, 65536, 1, 1835062, 65536, 1, 1900598, 65536, 1, 1966134, 65536, 1, 1769527, 65536, 1, 1835063, 65536, 1, 1900599, 65536, 1, 1966135, 65536, 1, 1769528, 65536, 1, 1835064, 65536, 1, 1900600, 65536, 1, 1966136, 65536, 1, 1769529, 65536, 1, 1835065, 65536, 1, 1900601, 65536, 1, 1966137, 65536, 1, 1769530, 65536, 1, 1835066, 65536, 1, 1900602, 65536, 1, 1966138, 65536, 1, 1769531, 65536, 1, 1835067, 65536, 1, 1900603, 65536, 1, 1966139, 65536, 1, 1769532, 65536, 1, 1835068, 65536, 1, 1900604, 65536, 1, 1966140, 65536, 1, 1769533, 65536, 1, 1835069, 65536, 1, 1900605, 65536, 1, 1966141, 65536, 1, 1769534, 65536, 1, 1835070, 65536, 1, 1900606, 65536, 1, 1966142, 65536, 1, 1769535, 65536, 1, 1835071, 65536, 1, 1900607, 65536, 1, 1966143, 65536, 1, 1703947, 65536, 0, 1703946, 65536, 0, 1703945, 65536, 0, 1703944, 65536, 0, 1703943, 65536, 0, 1703942, 65536, 0, 1703941, 65536, 0, 1703940, 65536, 0, 1703939, 65536, 0, 393227, 131072, 1, 458763, 131072, 1, 524299, 131072, 1, 589835, 131072, 1, 655371, 131072, 1, 720907, 131072, 1, 786443, 131072, 1, 851979, 131072, 1, 917515, 131072, 1, 983051, 131072, 1, 1048587, 131072, 1, 1114123, 131072, 1, 1179659, 131072, 1, 1245195, 131072, 1, 1310731, 131072, 1, 1376267, 131072, 1, 1441803, 131072, 1, 1507339, 131072, 1, 1572875, 131072, 1, 1638411, 131072, 1, 1704000, 65536, 0, 1704001, 65536, 0, 1704002, 65536, 0, 1704003, 65536, 0, 1704004, 65536, 0, 1704005, 65536, 0, 1704006, 65536, 0, 1704007, 65536, 0, 1704008, 65536, 0, 1704009, 65536, 0, 1704010, 65536, 0, 1704011, 65536, 0, 1704012, 65536, 0, 1704013, 65536, 0, 1704014, 65536, 0, 1704015, 65536, 0, 1704016, 65536, 0, 1704017, 65536, 0, 1704018, 65536, 0, 1704019, 65536, 0, 1704020, 65536, 0, 1704021, 65536, 0, 1704022, 65536, 0, 1704023, 65536, 0, 1704024, 65536, 0, 1704025, 65536, 0, 1704026, 65536, 0, 1704027, 65536, 0, 1704028, 65536, 0, 1704029, 65536, 0, 1704030, 65536, 0, 1704031, 65536, 0, 1704032, 65536, 0, 1704033, 65536, 0, 1704034, 65536, 0, 1704035, 65536, 0, -130989, 0, 1, -65453, 0, 1, 83, 0, 1, 65619, 0, 1, 131155, 0, 1, 196691, 0, 1, 262227, 0, 1, 327763, 0, 1, 393299, 0, 1, 458835, 0, 1, 524371, 0, 1, 589907, 0, 1, 655443, 0, 1, 720979, 0, 1, 786515, 0, 1, 852051, 0, 1, 917587, 0, 1, 983123, 0, 1, 1048659, 0, 1, 1114195, 0, 1, 1179731, 0, 1, 1245267, 0, 1, 1310803, 0, 1, 1376339, 0, 1, 1441875, 0, 1, 1572947, 0, 1, 1507411, 0, 1, 1638483, 0, 1, -130988, 65536, 1, -130987, 65536, 1, -130986, 65536, 1, -130985, 65536, 1, -130984, 65536, 1, -130983, 65536, 1, -130982, 65536, 1, -130981, 65536, 1, -130980, 65536, 1, -130979, 65536, 1, -130978, 65536, 1, -130977, 65536, 1, -130976, 65536, 1, -130975, 65536, 1, -130974, 65536, 1, -130973, 65536, 1, -130972, 65536, 1, -65436, 65536, 1, 100, 65536, 1, 65636, 65536, 1, 131172, 65536, 1, 196708, 65536, 1, 262244, 65536, 1, 327780, 65536, 1, 393316, 65536, 1, 458852, 65536, 1, 524388, 65536, 1, 589924, 65536, 1, 655460, 65536, 1, 720996, 65536, 1, 786532, 65536, 1, 852068, 65536, 1, 917604, 65536, 1, 983140, 65536, 1, 1048676, 65536, 1, 1114212, 65536, 1, 1179748, 65536, 1, 1245284, 65536, 1, 1310820, 65536, 1, 1376356, 65536, 1, 1441892, 65536, 1, 1507428, 65536, 1, 1572964, 65536, 1, 1638500, 65536, 1, 1179744, 65536, 1, 1114208, 65536, 1, 1048672, 65536, 1, 983136, 65536, 1, 917600, 65536, 1, 852064, 65536, 1, 786528, 65536, 1, 720992, 65536, 1, 655456, 65536, 1, 589920, 65536, 1, 524384, 65536, 1, 458848, 65536, 1, 393312, 65536, 1, 327776, 65536, 1, 262240, 65536, 1, 196704, 65536, 1, 131168, 65536, 1, 65632, 65536, 1, 96, 65536, 1, -65440, 65536, 1, -65441, 65536, 1, -65442, 65536, 1, -65443, 65536, 1, -65444, 65536, 1, -65445, 65536, 1, -65446, 65536, 1, -65447, 65536, 1, -65448, 65536, 1, -65449, 65536, 1, -65450, 65536, 1, -65451, 65536, 1, -65452, 65536, 1, 84, 65536, 1, 65620, 65536, 1, 131156, 65536, 1, 196692, 65536, 1, 262228, 65536, 1, 327764, 65536, 1, 393300, 65536, 1, 458836, 65536, 1, 524372, 65536, 1, 589908, 65536, 1, 655444, 65536, 1, 720980, 65536, 1, 786516, 65536, 1, 852052, 65536, 1, 917588, 65536, 1, 983124, 65536, 1, 1048660, 65536, 1, 1114196, 65536, 1, 1179732, 65536, 1, 1245268, 65536, 1, 1310804, 65536, 1, 1376340, 65536, 1, 1441876, 65536, 1, 1507412, 65536, 1, 1572948, 65536, 1, 1638484, 65536, 1, 1638485, 65536, 1, 1572949, 65536, 1, 1507413, 65536, 1, 1441877, 65536, 1, 1376341, 65536, 1, 1310805, 65536, 1, 1245269, 65536, 1, 1179733, 65536, 1, 1114197, 65536, 1, 1048661, 65536, 1, 983125, 65536, 1, 917589, 65536, 1, 852053, 65536, 1, 786517, 65536, 1, 720981, 65536, 1, 655445, 65536, 1, 589909, 65536, 1, 524373, 65536, 1, 458837, 65536, 1, 393301, 65536, 1, 327765, 65536, 1, 262229, 65536, 1, 196693, 65536, 1, 131157, 65536, 1, 65621, 65536, 1, 85, 65536, 1, 86, 65536, 1, 65622, 65536, 1, 131158, 65536, 1, 196694, 65536, 1, 262230, 65536, 1, 327766, 65536, 1, 393302, 65536, 1, 458838, 65536, 1, 524374, 65536, 1, 589910, 65536, 1, 655446, 65536, 1, 720982, 65536, 1, 786518, 65536, 1, 852054, 65536, 1, 917590, 65536, 1, 983126, 65536, 1, 1048662, 65536, 1, 1114198, 65536, 1, 1179734, 65536, 1, 1245270, 65536, 1, 1310806, 65536, 1, 1376342, 65536, 1, 1441878, 65536, 1, 1507414, 65536, 1, 1572950, 65536, 1, 1638486, 65536, 1, 1638487, 65536, 1, 1572951, 65536, 1, 1507415, 65536, 1, 1441879, 65536, 1, 1376343, 65536, 1, 1310807, 65536, 1, 1245271, 65536, 1, 1179735, 65536, 1, 1114199, 65536, 1, 1048663, 65536, 1, 983127, 65536, 1, 917591, 65536, 1, 852055, 65536, 1, 786519, 65536, 1, 720983, 65536, 1, 655447, 65536, 1, 589911, 65536, 1, 524375, 65536, 1, 458839, 65536, 1, 393303, 65536, 1, 327767, 65536, 1, 262231, 65536, 1, 196695, 65536, 1, 131159, 65536, 1, 65623, 65536, 1, 87, 65536, 1, 88, 65536, 1, 65624, 65536, 1, 131160, 65536, 1, 196696, 65536, 1, 262232, 65536, 1, 327768, 65536, 1, 393304, 65536, 1, 458840, 65536, 1, 524376, 65536, 1, 589912, 65536, 1, 655448, 65536, 1, 720984, 65536, 1, 786520, 65536, 1, 852056, 65536, 1, 917592, 65536, 1, 983128, 65536, 1, 1048664, 65536, 1, 1114200, 65536, 1, 1179736, 65536, 1, 1245272, 65536, 1, 1310808, 65536, 1, 1376344, 65536, 1, 1441880, 65536, 1, 1507416, 65536, 1, 1572952, 65536, 1, 1638488, 65536, 1, 1638489, 65536, 1, 1572953, 65536, 1, 1507417, 65536, 1, 1441881, 65536, 1, 1376345, 65536, 1, 1310809, 65536, 1, 1245273, 65536, 1, 1179737, 65536, 1, 1114201, 65536, 1, 1048665, 65536, 1, 983129, 65536, 1, 917593, 65536, 1, 852057, 65536, 1, 786521, 65536, 1, 720985, 65536, 1, 655449, 65536, 1, 589913, 65536, 1, 524377, 65536, 1, 458841, 65536, 1, 393305, 65536, 1, 327769, 65536, 1, 262233, 65536, 1, 196697, 65536, 1, 131161, 65536, 1, 65625, 65536, 1, 89, 65536, 1, 90, 65536, 1, 65626, 65536, 1, 131162, 65536, 1, 196698, 65536, 1, 262234, 65536, 1, 327770, 65536, 1, 393306, 65536, 1, 458842, 65536, 1, 524378, 65536, 1, 589914, 65536, 1, 655450, 65536, 1, 720986, 65536, 1, 786522, 65536, 1, 852058, 65536, 1, 917594, 65536, 1, 983130, 65536, 1, 1048666, 65536, 1, 1114202, 65536, 1, 1179738, 65536, 1, 1245274, 65536, 1, 1310810, 65536, 1, 1376346, 65536, 1, 1441882, 65536, 1, 1507418, 65536, 1, 1572954, 65536, 1, 1638490, 65536, 1, 1638491, 65536, 1, 1572955, 65536, 1, 1507419, 65536, 1, 1441883, 65536, 1, 1376347, 65536, 1, 1310811, 65536, 1, 1245275, 65536, 1, 1179739, 65536, 1, 1114203, 65536, 1, 1048667, 65536, 1, 983131, 65536, 1, 917595, 65536, 1, 852059, 65536, 1, 786523, 65536, 1, 720987, 65536, 1, 655451, 65536, 1, 589915, 65536, 1, 524379, 65536, 1, 458843, 65536, 1, 393307, 65536, 1, 327771, 65536, 1, 262235, 65536, 1, 196699, 65536, 1, 131163, 65536, 1, 65627, 65536, 1, 91, 65536, 1, 92, 65536, 1, 65628, 65536, 1, 131164, 65536, 1, 196700, 65536, 1, 262236, 65536, 1, 327772, 65536, 1, 393308, 65536, 1, 458844, 65536, 1, 524380, 65536, 1, 589916, 65536, 1, 655452, 65536, 1, 720988, 65536, 1, 786524, 65536, 1, 852060, 65536, 1, 917596, 65536, 1, 983132, 65536, 1, 1048668, 65536, 1, 1114204, 65536, 1, 1179740, 65536, 1, 1245276, 65536, 1, 1310812, 65536, 1, 1376348, 65536, 1, 1441884, 65536, 1, 1507420, 65536, 1, 1572956, 65536, 1, 1638492, 65536, 1, 1638493, 65536, 1, 1572957, 65536, 1, 1507421, 65536, 1, 1441885, 65536, 1, 1376349, 65536, 1, 1310813, 65536, 1, 1245277, 65536, 1, 1179741, 65536, 1, 1114205, 65536, 1, 1048669, 65536, 1, 983133, 65536, 1, 917597, 65536, 1, 852061, 65536, 1, 786525, 65536, 1, 720989, 65536, 1, 655453, 65536, 1, 589917, 65536, 1, 524381, 65536, 1, 458845, 65536, 1, 393309, 65536, 1, 327773, 65536, 1, 262237, 65536, 1, 196701, 65536, 1, 131165, 65536, 1, 65629, 65536, 1, 93, 65536, 1, 94, 65536, 1, 65630, 65536, 1, 131166, 65536, 1, 196702, 65536, 1, 262238, 65536, 1, 327774, 65536, 1, 393310, 65536, 1, 458846, 65536, 1, 524382, 65536, 1, 589918, 65536, 1, 655454, 65536, 1, 720990, 65536, 1, 786526, 65536, 1, 852062, 65536, 1, 917598, 65536, 1, 983134, 65536, 1, 1048670, 65536, 1, 1114206, 65536, 1, 1179742, 65536, 1, 1245278, 65536, 1, 1310814, 65536, 1, 1376350, 65536, 1, 1441886, 65536, 1, 1507422, 65536, 1, 1572958, 65536, 1, 1638494, 65536, 1, 1638495, 65536, 1, 1572959, 65536, 1, 1507423, 65536, 1, 1441887, 65536, 1, 1376351, 65536, 1, 1310815, 65536, 1, 1245279, 65536, 1, 1179743, 65536, 1, 1114207, 65536, 1, 1048671, 65536, 1, 983135, 65536, 1, 917599, 65536, 1, 852063, 65536, 1, 786527, 65536, 1, 720991, 65536, 1, 655455, 65536, 1, 589919, 65536, 1, 524383, 65536, 1, 458847, 65536, 1, 393311, 65536, 1, 327775, 65536, 1, 262239, 65536, 1, 196703, 65536, 1, 131167, 65536, 1, 65631, 65536, 1, 95, 65536, 1, 1245280, 65536, 1, 1310816, 65536, 1, 1376352, 65536, 1, 1441888, 65536, 1, 1507424, 65536, 1, 1572960, 65536, 1, 1638496, 65536, 1, 1638497, 65536, 1, 1572961, 65536, 1, 1507425, 65536, 1, 1441889, 65536, 1, 1376353, 65536, 1, 1310817, 65536, 1, 1245281, 65536, 1, 1179745, 65536, 1, 1114209, 65536, 1, 1048673, 65536, 1, 983137, 65536, 1, 917601, 65536, 1, 852065, 65536, 1, 786529, 65536, 1, 720993, 65536, 1, 655457, 65536, 1, 589921, 65536, 1, 524385, 65536, 1, 458849, 65536, 1, 393313, 65536, 1, 327777, 65536, 1, 262241, 65536, 1, 196705, 65536, 1, 131169, 65536, 1, 65633, 65536, 1, 97, 65536, 1, -65439, 65536, 1, -65438, 65536, 1, 98, 65536, 1, 65634, 65536, 1, 131170, 65536, 1, 196706, 65536, 1, 262242, 65536, 1, 327778, 65536, 1, 393314, 65536, 1, 458850, 65536, 1, 524386, 65536, 1, 589922, 65536, 1, 655458, 65536, 1, 720994, 65536, 1, 786530, 65536, 1, 852066, 65536, 1, 917602, 65536, 1, 983138, 65536, 1, 1048674, 65536, 1, 1114210, 65536, 1, 1179746, 65536, 1, 1245282, 65536, 1, 1310818, 65536, 1, 1376354, 65536, 1, 1441890, 65536, 1, 1507426, 65536, 1, 1572962, 65536, 1, 1638498, 65536, 1, 1638499, 65536, 1, 1572963, 65536, 1, 1507427, 65536, 1, 1441891, 65536, 1, 1376355, 65536, 1, 1310819, 65536, 1, 1245283, 65536, 1, 1179747, 65536, 1, 1114211, 65536, 1, 1048675, 65536, 1, 983139, 65536, 1, 917603, 65536, 1, 852067, 65536, 1, 786531, 65536, 1, 720995, 65536, 1, 655459, 65536, 1, 589923, 65536, 1, 524387, 65536, 1, 458851, 65536, 1, 393315, 65536, 1, 327779, 65536, 1, 262243, 65536, 1, 196707, 65536, 1, 131171, 65536, 1, 65635, 65536, 1, 99, 65536, 1, -65437, 65536, 1)

[node name="Player" parent="." instance=ExtResource("3_nc3y0")]
position = Vector2(299, 970)

[node name="FollowerEnemy" parent="." instance=ExtResource("4_v2sc1")]
visible = false
position = Vector2(863, 989)

[node name="RecordPosTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="StartFollowTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_bottom = 1080
limit_smoothed = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_top_margin = 0.5

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(663, 619.75)
shape = SubResource("RectangleShape2D_3koqi")

[connection signal="player_died" from="Player" to="." method="_on_player_player_died"]
[connection signal="timeout" from="RecordPosTimer" to="." method="_on_record_pos_timer_timeout"]
[connection signal="timeout" from="StartFollowTimer" to="." method="_on_start_follow_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
